--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 	<head>
 		<title>Name</title>
+			 <style>
+		body {
+  background-color: salmon;
+}
+		    h1{color:white;}
+		    h2{color:white;}
+		    h3{color:white;}
+		    h4{color:cyan;}
+		    h5{color:black;}
+		    h6{color:cyan;}
+		    #rounded-img{border-radius:30px;}
+		    table {
+      border-collapse: collapse; 
+      width: 80%;
+      margin: 20px auto;
+    }
+ 
+    th, td {
+      border: 2px solid black;
+      padding: 10px;
+      text-align: center;
+    }
+ 
+    th,td{
+      background-color: cyan; 
+      color: black;
+    }
+ 
+    td a{
+      color: black;
+      text-decoration: none;
+    }
+ 
+		    
+</style> 
+
 	</head>
 
 	<body>
+<a href="cuprins.html">cuprins</a>
 		<h1> Nume: </h1>
         <h2> Prenume:</h2>
         <h3> Email:</h3>
-        <img src="images\Picture1.jpg">
+        <img id="rounded-img" src="images\Picture1.jpg">
         <h4>Asteptari legate de educatie</h4>
         <p>-sa devin inginer</p>
        <table>
