--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 	<head>
 		<title>Name</title>
-			 <style>
+		<script src="script.js" defer></script>
+ 
+
+
+
+<style>
 		body {
   background-color: salmon;
 }
@@ -37,14 +42,15 @@
 </style> 
 
 	</head>
-
+<button id="button">Alta viata</button>
 	<body>
 <a href="cuprins.html">cuprins</a>
-		<h1> Nume: </h1>
-        <h2> Prenume:</h2>
+		<h1 id="nume" > Nume: </h1>
+
+        <h2 id="prenume" > Prenume:</h2>
         <h3> Email:</h3>
         <img id="rounded-img" src="images\Picture1.jpg">
-        <h4>Asteptari legate de educatie</h4>
+        <h4 id="asteptari"          >Asteptari legate de educatie</h4>
         <p>-sa devin inginer</p>
        <table>
 <thead>
